--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:5002": "next dev -p 5002",
     "build": "next build",
+    "export": "next build",
     "start": "next start",
     "lint": "next lint"
   },
