--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "products-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "scripts": {
     "dev": "next dev",
     "dev:5002": "next dev -p 5002",
@@ -18,12 +21,12 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.19.24",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.9.3"
   }
 }
