--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    env:
+      NEXT_PUBLIC_API_URL: 'https://fakestoreapi.com'
     
     steps:
       - name: Checkout
@@ -30,6 +32,9 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          
+      - name: Show API URL
+        run: echo "API URL: $NEXT_PUBLIC_API_URL"
           
       - name: Install dependencies
         run: npm ci
