Fix YAML syntax error in GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,34 +22,35 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     env:
       NEXT_PUBLIC_API_URL: 'https://fakestoreapi.com'
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          
+
       - name: Show API URL
-        run: echo "API URL: $NEXT_PUBLIC_API_URL"
-          
+        run: |
+          echo "API URL: $NEXT_PUBLIC_API_URL"
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Build
         run: npm run build
-        
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
-          
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
