--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   build-and-deploy:
@@ -50,6 +50,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
+          retention-days: 1
 
       - name: Deploy to GitHub Pages
         id: deployment
